terraform/values/exs/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp
  namespace: example
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
  selector:
    app: myapp
