terraform/values/exs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp
  namespace: example
  annotations:
    cert-manager.io/cluster-issuer: http-01-production
spec:
  ingressClassName: external-nginx
  rules:
    - host: ex9.rocketbr.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: myapp
                port:
                  number: 8080
  tls:
    - hosts:
        - ex9.rocketbr.online
      secretName: ex9-rocketbr-online
